migration from old project, structure, documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = videoanalytics
-version = 0.0.1
+version = attr: videoanalytics.__version__
 author = Nicolás Eduardo Horro
 author_email = nhorro@gmail.com
 description = Library for prototyping video analytic applicatios.
