--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,9 @@ actionlib==1.12.0
 alabaster==0.7.12
 angles==1.9.12
 appdirs==1.4.4
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613036642480/work
 astunparse==1.6.3
 async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
 Babel==2.9.1
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
 bondpy==1.8.3
 build==0.5.0
 cachetools==4.2.1
@@ -27,7 +23,7 @@ cryptography==3.4.7
 cv-bridge==1.13.0
 cycler==0.10.0
 decorator==5.0.7
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+detmetric==0.2.0
 diagnostic-analysis==1.9.3
 diagnostic-common-diagnostics==1.9.3
 diagnostic-updater==1.9.3
@@ -55,89 +51,57 @@ h5py==2.10.0
 idna==2.10
 image-geometry==1.13.0
 imagesize==1.2.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1617877314848/work
 iniconfig==1.1.1
 interactive-markers==1.11.5
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206598566/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///tmp/build/80754af9/ipython_1617118429768/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
 jedi==0.17.0
 jeepney==0.6.0
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
 joint-state-publisher==1.12.15
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
-jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1612213308260/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
 kdl-parser-py==1.13.1
 Keras-Preprocessing==1.1.2
 keyring==23.0.1
-kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1612282414123/work
 laser-geometry==1.6.5
 lxml==4.6.3
 Markdown==3.3.4
 markdown-it-py==1.1.0
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1594371495811/work
 matplotlib==2.2.3
 mdit-py-plugins==0.2.8
+mean-average-precision==2021.4.26.0
 message-filters==1.14.5
-mistune @ file:///tmp/build/80754af9/mistune_1594373098390/work
 mkl-fft==1.3.0
 mkl-random==1.1.1
 mkl-service==2.3.0
 Mypackage==0.1
 myst-parser==0.15.1
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914821128/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
 nbsphinx==0.8.6
 nbsphinx-link==1.3.0
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
 networkx==2.2
-notebook @ file:///tmp/build/80754af9/notebook_1616443455024/work
 numpy==1.18.5
 oauthlib==3.1.0
+object-detection-metrics==0.1
 olefile==0.46
 opencv-python==4.1.1.26
 opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
 pandas==1.2.4
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120451932/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
 pep517==0.10.0
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///tmp/build/80754af9/pillow_1617386154241/work
 pipenv==2021.5.29
 pkginfo==1.7.0
 pluggy==0.13.1
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
+prettytable==2.1.0
 protobuf==3.15.8
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pygraphviz==1.7
 pyperclip==1.8.2
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141707582/work
 pytest==6.2.4
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
 python-qt-binding==0.4.0
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
 PyYAML==5.4.1
 pyzmq==20.0.0
 qt-dotgraph==0.4.0
 qt-gui==0.4.0
 qt-gui-cpp==0.4.0
 qt-gui-py-common==0.4.0
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
 QtPy==1.9.0
 readme-renderer==29.0
 requests==2.25.1
@@ -208,11 +172,10 @@ rqt-web==0.4.8
 rsa==4.7.2
 rviz==1.13.9
 scipy==1.4.1
+seaborn==0.11.1
 SecretStorage==3.3.1
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
 sensor-msgs==1.12.7
 Shapely==1.7.1
-six @ file:///tmp/build/80754af9/six_1605205313296/work
 smach==2.0.1
 smach-ros==2.0.1
 smclib==1.8.3
@@ -230,7 +193,6 @@ tensorboard-plugin-wit==1.8.0
 tensorflow-gpu==2.3.0rc0
 termcolor==1.1.0
 terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
 tf==1.12.1
 tf-conversions==1.12.1
 tf-estimator-nightly==2.3.0.dev2020062301
@@ -240,23 +202,17 @@ tf2-py==0.6.5
 tf2-ros==0.6.5
 toml==0.10.2
 topic-tools==1.14.5
-tornado @ file:///tmp/build/80754af9/tornado_1606942283357/work
 tqdm==4.60.0
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
 turtlebot3-automatic-parking==1.1.0
 turtlebot3-autorace-core==1.2.0
 turtlebot3-teleop==1.2.2
 twine==3.4.1
-typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
 urdfdom-py==0.4.3
 urllib3==1.26.4
--e git+https://github.com/nhorro/videoanalytics.git@e11407c05f6dac6703440097e920aacdd6121025#egg=videoanalytics
 virtualenv==20.4.7
 virtualenv-clone==0.5.4
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
 xacro==1.13.5
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
