--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -1,5 +1,218 @@
-Sphinx==4.0.2
-sphinx-rtd-theme==0.5.2
+absl-py==0.12.0
+actionlib==1.12.0
+alabaster==0.7.12
+angles==1.9.12
+appdirs==1.4.4
+astunparse==1.6.3
+async-generator==1.10
+Babel==2.9.1
+bondpy==1.8.3
+build==0.5.0
+cachetools==4.2.1
+camera-calibration==1.14.0
+camera-calibration-parsers==1.11.13
+catkin==0.7.20
+certifi==2021.5.30
+cffi==1.14.0
+chardet==4.0.0
+cmd2==2.1.1
+colorama==0.4.4
+controller-manager==0.18.0
+controller-manager-msgs==0.18.0
+cryptography==3.4.7
+cv-bridge==1.13.0
+cycler==0.10.0
+decorator==5.0.7
+detmetric==0.2.0
+diagnostic-analysis==1.9.3
+diagnostic-common-diagnostics==1.9.3
+diagnostic-updater==1.9.3
+distlib==0.3.2
+docutils==0.16
+dynamic-reconfigure==1.6.3
+easydict==1.9
+entrypoints==0.3
+filelock==3.0.12
+filterpy==1.4.5
+gast==0.3.3
+gazebo-plugins==2.8.6
+gazebo-ros==2.8.6
+gencpp==0.6.2
+geneus==2.2.6
+genlisp==0.4.16
+genmsg==0.5.12
+gennodejs==2.0.1
+genpy==0.6.9
+google-auth==1.28.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.37.0
+h5py==2.10.0
+idna==2.10
+image-geometry==1.13.0
+imagesize==1.2.0
+iniconfig==1.1.1
+interactive-markers==1.11.5
+jedi==0.17.0
+jeepney==0.6.0
+joint-state-publisher==1.12.15
+jupyter==1.0.0
+kdl-parser-py==1.13.1
+Keras-Preprocessing==1.1.2
+keyring==23.0.1
+laser-geometry==1.6.5
+lxml==4.6.3
+Markdown==3.3.4
+markdown-it-py==1.1.0
+matplotlib==2.2.3
+mdit-py-plugins==0.2.8
+mean-average-precision==2021.4.26.0
+message-filters==1.14.5
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+Mypackage==0.1
 myst-parser==0.15.1
 nbsphinx==0.8.6
 nbsphinx-link==1.3.0
+networkx==2.2
+numpy==1.18.5
+oauthlib==3.1.0
+object-detection-metrics==0.1
+olefile==0.46
+opencv-python==4.1.1.26
+opt-einsum==3.3.0
+pandas==1.2.4
+pep517==0.10.0
+pipenv==2021.5.29
+pkginfo==1.7.0
+pluggy==0.13.1
+prettytable==2.1.0
+protobuf==3.15.8
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pygraphviz==1.7
+pyperclip==1.8.2
+pytest==6.2.4
+python-qt-binding==0.4.0
+PyYAML==5.4.1
+pyzmq==20.0.0
+qt-dotgraph==0.4.0
+qt-gui==0.4.0
+qt-gui-cpp==0.4.0
+qt-gui-py-common==0.4.0
+QtPy==1.9.0
+readme-renderer==29.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+resource-retriever==1.12.6
+rfc3986==1.5.0
+rosapi==0.11.5
+rosbag==1.14.5
+rosboost-cfg==1.14.8
+rosbridge-library==0.11.5
+rosbridge-server==0.11.5
+rosclean==1.14.7
+roscreate==1.14.8
+rosgraph==1.14.3
+roslaunch==1.14.3
+roslib==1.14.7
+roslint==0.11.2
+roslz4==1.14.5
+rosmake==1.14.8
+rosmaster==1.14.3
+rosmsg==1.14.5
+rosnode==1.14.5
+rosparam==1.14.3
+rospy==1.14.3
+rosserial-arduino==0.8.0
+rosserial-client==0.8.0
+rosserial-python==0.8.0
+rosservice==1.14.5
+rostest==1.14.5
+rostopic==1.14.5
+rosunit==1.14.7
+roswtf==1.14.5
+rqt-action==0.4.9
+rqt-bag==0.4.12
+rqt-bag-plugins==0.4.12
+rqt-console==0.4.9
+rqt-dep==0.4.9
+rqt-graph==0.4.11
+rqt-ground-robot-teleop==1.3.1
+rqt-gui==0.5.1
+rqt-gui-py==0.5.1
+rqt-image-view==0.4.14
+rqt-launch==0.4.8
+rqt-logger-level==0.4.8
+rqt-moveit==0.5.7
+rqt-msg==0.4.8
+rqt-multiplot==0.0.10
+rqt-nav-view==0.5.7
+rqt-plot==0.4.9
+rqt-pose-view==0.5.8
+rqt-publisher==0.4.8
+rqt-py-common==0.5.1
+rqt-py-console==0.4.8
+rqt-reconfigure==0.5.1
+rqt-robot-dashboard==0.5.7
+rqt-robot-monitor==0.5.9
+rqt-robot-steering==0.5.10
+rqt-runtime-monitor==0.5.7
+rqt-rviz==0.6.0
+rqt-service-caller==0.4.8
+rqt-shell==0.4.9
+rqt-srv==0.4.8
+rqt-tf-tree==0.6.0
+rqt-top==0.4.8
+rqt-topic==0.4.11
+rqt-web==0.4.8
+rsa==4.7.2
+rviz==1.13.9
+scipy==1.4.1
+seaborn==0.11.1
+SecretStorage==3.3.1
+sensor-msgs==1.12.7
+Shapely==1.7.1
+smach==2.0.1
+smach-ros==2.0.1
+smclib==1.8.3
+snowballstemmer==2.1.0
+Sphinx==4.0.2
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.8.0
+tensorflow-gpu==2.3.0rc0
+termcolor==1.1.0
+terminado==0.9.4
+tf==1.12.1
+tf-conversions==1.12.1
+tf-estimator-nightly==2.3.0.dev2020062301
+tf2-geometry-msgs==0.6.5
+tf2-kdl==0.6.5
+tf2-py==0.6.5
+tf2-ros==0.6.5
+toml==0.10.2
+topic-tools==1.14.5
+tqdm==4.60.0
+turtlebot3-automatic-parking==1.1.0
+turtlebot3-autorace-core==1.2.0
+turtlebot3-teleop==1.2.2
+twine==3.4.1
+urdfdom-py==0.4.3
+urllib3==1.26.4
+virtualenv==20.4.7
+virtualenv-clone==0.5.4
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xacro==1.13.5
