--- a/docs/_sources/requirements.txt
+++ b/docs/_sources/requirements.txt
@@ -1,5 +1,66 @@
-Sphinx==4.0.2
-sphinx-rtd-theme==0.5.2
+alabaster==0.7.12
+appdirs==1.4.4
+astunparse==1.6.3
+async-generator==1.10
+Babel==2.9.1
+build==0.5.0
+cachetools==4.2.1
+certifi==2021.5.30
+cffi==1.14.0
+chardet==4.0.0
+cmd2==2.1.1
+colorama==0.4.4
+cryptography==3.4.7
+cycler==0.10.0
+decorator==5.0.7
+detmetric==0.2.0
+distlib==0.3.2
+docutils==0.16
+easydict==1.9
+entrypoints==0.3
+filelock==3.0.12
+filterpy==1.4.5
+gast==0.3.3
+google-auth==1.28.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.37.0
+h5py==2.10.0
+idna==2.10
+imagesize==1.2.0
+iniconfig==1.1.1
+jedi==0.17.0
+jeepney==0.6.0
+jupyter==1.0.0
+Keras-Preprocessing==1.1.2
+matplotlib==2.2.3
+mean-average-precision==2021.4.26.0
 myst-parser==0.15.1
 nbsphinx==0.8.6
 nbsphinx-link==1.3.0
+networkx==2.2
+numpy==1.18.5
+object-detection-metrics==0.1
+opencv-python==4.1.1.26
+pandas==1.2.4
+prettytable==2.1.0
+pygraphviz==1.7
+pytest==6.2.4
+pyzmq==20.0.0
+readme-renderer==29.0
+requests==2.25.1
+scipy==1.4.1
+seaborn==0.11.1
+Shapely==1.7.1
+snowballstemmer==2.1.0
+Sphinx==4.0.2
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+tensorflow-gpu==2.3.0rc0
+toml==0.10.2
+tqdm==4.60.0
